--- a/HW-6-flexbox/style.css
+++ b/HW-6-flexbox/style.css
@@ -153,7 +153,7 @@ border-radius: 50px;
 }
 .womens {
 position: absolute;
-width: 885px;
+width: 723px;
 height: 468px;
 left: 640px;
 top: 381px;
@@ -669,7 +669,7 @@ opacity: 0.2;
     font-size: 40px;
     line-height: 130%;
     color: #212353;
-    margin-left: -65px;
+    margin-left: 277px;
     margin-top: 3735px;
 }
 .text16 {
@@ -699,8 +699,8 @@ color: #4B5D68;
     text-align: center;
     color: #FFFFFF;
     position: absolute;
-    top: 3759px;
-    right: 1200px;
+    top: 3766px;
+    right: 397px;
 }
 .whitedemo {
     width: 112px;
@@ -719,7 +719,7 @@ color: #4B5D68;
 .button2 {
     width: 210px;
     height: 60px;
-    left: 1150px;
+    left: 1145px;
     top: 50px;
     right: 240px;
     background: #FFFFFF;
@@ -793,7 +793,7 @@ color: #212353;
 position: absolute;
 width: 153px;
 height: 30px;
-left: 1000px;
+left: 902px;
 top: 3985px;
 font-family:'Lexend', sans-serif;
 font-style: normal;
@@ -806,7 +806,7 @@ color: #212353;
 position: absolute;
 width: 86px;
 height: 160px;
-left: 1000px;
+left: 902px;
 top: 4071px;
 font-family:'Lexend', sans-serif;
 font-style: normal;
@@ -819,7 +819,7 @@ color: #212353;
 position: absolute;
 width: 153px;
 height: 30px;
-left: 1356px;
+left: 1190px;
 top: 3959px;
 font-family: 'Lexend', sans-serif;
 font-style: normal;
@@ -832,7 +832,7 @@ color: #212353;
 position: absolute;
 width: 86px;
 height: 160px;
-left: 1356px;
+left: 1190px;
 top: 4045px;
 font-family:'Lexend', sans-serif;
 font-style: normal;
@@ -845,7 +845,7 @@ color: #212353;
 position: absolute;
 width: 153px;
 height: 30px;
-left: 1600px;
+left: 1422px;
 top: 3988px;
 font-family: 'Lexend', sans-serif;
 font-style: normal;
@@ -858,7 +858,7 @@ color: #212353;
 position: absolute;
 width: 50px;
 height: 50px;
-left: 1599px;
+left: 1422px;px;
 top: 4071px;
 background: #212353;
 opacity: 0.1;
@@ -868,7 +868,7 @@ border-radius: 50px;
 position: absolute;
 width: 50px;
 height: 50px;
-left: 1665px;
+left: 1488px;
 top: 4071px;
 background: #212353;
 opacity: 0.1;
@@ -878,7 +878,7 @@ border-radius: 50px;
 position: absolute;
 width: 50px;
 height: 50px;
-left: 1731px;
+left: 1554px;
 top: 4071px;
 background: #212353;
 opacity: 0.1;
@@ -910,6 +910,6 @@ color: #212353;
     line-height: 160%;
     color: #212353;
     position: absolute;
-    left: 1726px;
+    left: 1560px;
     top: 4399px;
 }
