--- a/HW-10-animation/style.css
+++ b/HW-10-animation/style.css
@@ -1,120 +1,124 @@
-.body{
-background-color: rgb(182, 221, 41);
-width: 100%;
-margin: 0;
-padding: 0;
+.body {
+    background-color: rgb(0, 0, 0);
 }
 
-.sword_body {
-width: 100px;
-height: auto;
-display: inline-block;
-transition: 1s;
-transition-timing-function: cubic-bezier(0.42, 0, 1.0, 1.0);
-cursor: pointer;
-padding: 100px 100px;
-margin-left: 36%;
+.box1 {
+  margin-top: 100px;
 }
-.sword_body::before {
-display: block;
-content: "";
-width: 200px;
-transition: 1s ease-in-out;
-height: 5px;
-background: linear-gradient( 270deg, rgba(255, 255, 255, 1) 68%, rgba(0, 0, 0, 1) 69%, rgba(0, 0, 0, 1) 77%, rgba(0, 0, 0, 1) 84%, rgba(255, 255, 255, 1) 85%);
+
+.sword {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 500px;
+    height: 350px;
+    margin: 0 auto;
 }
-.sword_body::after {
-display: block;
-content: "";
-width: 200px;
-transition: 1s ease-in-out;
-height: 5px;
-background: linear-gradient(270deg, rgba(255, 255, 255, 1) 68%, rgba(0, 0, 0, 1) 69%, rgba(0, 0, 0, 1) 77%, rgba(0, 0, 0, 1) 84%, rgba(255, 255, 255, 1) 85%);
+
+.sword::before {
+    content: "";
+    width: 400px;
+    height: 20px;
+    background: linear-gradient(90deg, rgba(255,255,255,1) 15%, rgba(0,0,0,1) 15%, rgba(0,0,0,1) 30%, rgba(255,255,255,1) 30%); 
+    border-radius: 10px;
 }
-.sword-center {
-width: 200px;
-height: 5px;
-margin: 10px 0;
-background: linear-gradient(270deg, rgba(255, 255, 255, 1) 13%, rgba(0, 0, 0, 1) 13%, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 1) 30%, rgba(255, 255, 255, 1) 30%);
+
+.sword::after {
+    content: "";
+    width: 400px;
+    height: 20px;
+    background: linear-gradient(90deg, rgba(255,255,255,1) 15%, rgba(0,0,0,1) 15%, rgba(0,0,0,1) 30%, rgba(255,255,255,1) 30%);
+    border-radius: 10px;
 }
-.sword_body:hover .sword-center {
-visibility: hidden;
+
+.sword-1 {
+    width: 400px;
+    height: 20px;
+    background: linear-gradient(450deg, #ffffff 0%, #ffffff 70%, #000 70%, #000 85%, #ffffff 85%, #ffffff 100% );
+    border-radius: 10px;
 }
-.sword_body:hover::before {
-transform:  rotate(-45deg);
- box-shadow: 0px 0px 75px 10px rgb(252, 3, 3);
+
+.sword:hover.sword::before {
+    transform: translate(0, 120px) rotate(-135deg);
+    transition-duration: 3s;
+    box-shadow: 0px 0px 50px rgb(23, 36, 150);
+    background: linear-gradient(90deg, rgb(63, 63, 63) 15%, rgba(0,0,0,1) 15%, rgba(0,0,0,1) 30%, rgba(25,9,177,1) 30%);
 }
-  .sword_body:hover::after {
-transform: translateY(-27px) rotate(-135deg);
-box-shadow: 0px 0px 75px 10px rgb(9, 219, 9);
+
+.sword:hover.sword::after {
+    transform: translate(0, -110px) rotate(-45deg);
+    transition-duration: 3s;
+    box-shadow: 0px 0px  50px rgb(180, 1, 1);
+    background: linear-gradient(90deg, rgb(63, 63, 63) 15%, rgba(0,0,0,1) 15%, rgba(0,0,0,1) 30%, rgba(218,3,3,1) 30%);
 }
-.Down_Ball {
-background-color: rgb(216, 116, 186);
-width: 100%;
-height: 300px;
+
+.sword:hover .sword-1 {
+    visibility: hidden;
 }
-.balls {
-display: flex;
-align-items: center;
-justify-content: center;
+
+.circle {
+    margin: 0 100px;
+    background-color: rgb(167, 57, 152);
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.ball {
-width: 80px;
-height: 80px;
-border-radius: 80%;
-margin-top: 100px;
-background-color: cadetblue;
-box-shadow: 0px 72px 16px -16px rgb(0 0 0 / 40%);
+
+.circle-box div {
+    width: 75px;
+    height: 75px;
+    background-color: rgb(13, 228, 24);
+    border-radius: 50px;
+    box-shadow: 0px 25px 25px 1px #3b3b3b;
+    display: inline-block;
 }
-.ball:first-child {
-animation-name: ball-left;
-animation-duration: 1.5s;
-animation-iteration-count: infinite;
-animation-timing-function: ease-in-out;
+
+.circle-1 {
+  animation-name: one;
+    animation-duration: 1s;
+    animation-delay: 3s;
+    animation-iteration-count: infinite;
+    animation-direction: linear;
+    animation-timing-function: ease-in-out;
 }
-.ball:last-child {
-animation-name: ball-right;
-animation-duration: 1.5s;
-animation-iteration-count: infinite;
-animation-timing-function: ease-in-out;
-}
-@keyframes ball-left {
+
+@keyframes one {
+    from {
+        transform: translate(0);
+    }
     25% {
-transform: translate(-50px, -50px);
-box-shadow: 0px 112px 24px -18px rgb(0 0 0 / 40%);
+        transform: translate(-60px, -60px);
+    }
+    50% {
+        transform: translate(0);
+    }
+    to {
+        transform:translate(0) ;
+    }
 }
-50% {
-transform: translate(0px, 0px);
-box-shadow: 0px 72px 16px -16px rgb(0 0 0 / 40%);
- }
-}
+
+.circle-7 {
+    animation-name: two;
+      animation-duration: 1s;
+      animation-delay: 3s;
+      animation-iteration-count: infinite;
+      animation-direction: linear;
+      animation-timing-function: ease-in-out;
+  }
   
-@keyframes ball-right {
-50% {
-transform: translate(0px, 0px);
-box-shadow: 0px 72px 16px -16px rgb(0 0 0 / 40%);
-}
-75% {
-transform: translate(50px, -50px);
-box-shadow: 0px 112px 24px -18px rgb(0 0 0 / 40%);
- }
-}
-.ball:first-child, 
-.ball:nth-child(2){
-background: #ee4850;
-}
-.ball:nth-child(3) {
-background: linear-gradient(to right, #eeeb48, #d378d6);
-}
-.ball:nth-child(4) {
-background: linear-gradient(to right, #c43ec9, #d232a7);
-}
-.ball:nth-child(5) {
-background: #d525a6;
-}
-.ball:nth-child(6) {
-background: linear-gradient(to right, #d525a6, #df2457);
-}
-.ball:last-child {
-background: #df2457;
-}
+  @keyframes two {
+      from {
+          transform: translate(0);
+      }
+      50% {
+          transform: translate(0);
+      }
+      75% {
+          transform: translate(60px, -60px);
+      }
+      to {
+          transform:translate(0);
+      }
+  }
